--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>I am graduated in Uva Wellassa University of Sri Lanka within Bachelor of Industrial Information Technology degree. Then I entered to the Hamamatsu Japan Language College. I mostly prefer to study  Japanese language. Because It's the perfect gateway language. I want to study Japanese language and get an excellent education through the language.
+          <p>I am graduated in Uva Wellassa University of Sri Lanka within Bachelor of Industrial Information Technology degree. Then I entered to the Japan International Institute of Cybernetics. I mostly prefer to study  Japanese language. Because It's the perfect gateway language. I want to study I.T,Japanese language and get an excellent education through the language.
             </p>
         </div>
 
@@ -97,13 +97,14 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Student</h3>
             <p class="fst-italic">
-              * Hamamatsu Japan Language College
+              * Japan International Institute of Cybernetics
+
             </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>19 April 1996</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>080 9838 5826</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>080-9838-5826</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Hamamatsu, Japan</span></li>
                 </ul>
               </div>
@@ -111,7 +112,7 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>26</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>a.k.chamantha@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>chamantha96@gmail.com</span></li>
                   <!-- <li><i class="bi bi-chevron-right"></i> <strong>Japanese Level:</strong> <span>N5</span></li> -->
                 </ul>
               </div>
@@ -206,9 +207,9 @@
             <div class="resume-item pb-0">
               <h4>CHAMANTHA LAHIRU</h4>
               <ul>
-                <li>Hamamatsu-shi, Naka-ku, Nishi asada, 1-9-17 Korei pamu II 105, Japa</li>
-                <li>080 9838 5826</li>
-                <li>a.k.chamantha@gmail.com</li>
+                <li>Chiba ken, Matsudo-shi, Futatsugi futabachou, 204-7, Dyuonotsuki, 208, Japan</li>
+                <li>080-9838-5826</li>
+                <li>chamantha96@gmail.com</li>
               </ul>
             </div>
 
@@ -399,22 +400,22 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>Hamamatsu-shi, Naka-ku, Nishi asada, 1-9-17 Korei pamu II 105, Japan</p>
+                <p>Chiba ken, Matsudo-shi, Futatsugi futabachou, 204-7, Dyuonotsuki, 208, Japan</p>
               </div>
 
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>a.k.chamantha@gmail.com</p>
+                <p>chamantha96@gmail.com</p>
               </div>
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>080 9838 5826</p>
+                <p>080-9838-5826</p>
               </div>
-              <div class="mapouter"><div class="gmap_canvas"><iframe width="300" height="200" id="gmap_canvas" src="https://maps.google.com/maps?q=hamatsu%20nishi%20asada&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://123movies-to.org"></a><br><style>.mapouter{position:relative;text-align:right;height:200px;width:300px;}</style><a href="https://www.embedgooglemap.net">embedgooglemap.net</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:200px;width:300px;}</style></div></div>
-            </div>
+              <div class="mapouter"><div class="gmap_canvas"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3235.1109634266104!2d139.93313467484433!3d35.82175312224355!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x601885206f693571%3A0xcd9ccee1ab5b3242!2z44OH44Ol44Kq5LqM44OE5pyo!5e0!3m2!1sen!2sjp!4v1759240004443!5m2!1sen!2sjp" width="300" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></style></div></div>
+
 
           </div>
           
