--- a/index.html
+++ b/index.html
@@ -105,12 +105,12 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>19 April 1996</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>080-9838-5826</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Hamamatsu, Japan</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Shinmatsudo, Japan</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>26</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>29</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>chamantha96@gmail.com</span></li>
                   <!-- <li><i class="bi bi-chevron-right"></i> <strong>Japanese Level:</strong> <span>N5</span></li> -->
@@ -140,9 +140,9 @@
           <div class="col-lg-6" data-aos="fade-up">
 
             <div class="progress">
-              <span class="skill">Interpersonal skills <i class="val">60%</i></span>
+              <span class="skill">Interpersonal skills <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -154,9 +154,9 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Leadership skills <i class="val">60%</i></span>
+              <span class="skill">Leadership skills <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
