--- a/index.html
+++ b/index.html
@@ -242,9 +242,10 @@
             <h3 class="resume-title">Professional Qualification</h3>
             <div class="resume-item">
               <h4>Japanese Language</h4>
-              <h5>2021 - 2022</h5>
+              <h5>2021 - 2026</h5>
               <p><em>Oshin Nippon Academy - Sri Lanka</em></p>
-              <p><em>Hamamatsu Japan Language College - Japan ( studying )</em></p>
+              <p><em>Hamamatsu Japan Language College - Japan</em></p>
+              <p><em>International Institute of Cybernetics - Japan</em></p>
             </div>
             <!-- <div class="resume-item">
               <h4>Junior Software engineer</h4>
